--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@
 TerapicFisicHelper.Web/obj/Debug/net5.0/TerapicFisicHelper.Web.AssemblyInfo.cs
 
 TerapicFisicHelper.Data/obj/Debug/net5.0/TerapicFisicHelper.Data.AssemblyInfo.cs
+.vs/TerapicFisicHelper.API/v16/.suo
