--- a/TerapicFisicHelper.Web/appsettings.json
+++ b/TerapicFisicHelper.Web/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "ConexionTFH": "Server=.\\SQLEXPRESS; Database=DBTerapicFisicHelper; Trusted_Connection=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
