--- a/TerapicFisicHelper.Web/TerapicFisicHelper.Web.csproj
+++ b/TerapicFisicHelper.Web/TerapicFisicHelper.Web.csproj
@@ -5,11 +5,21 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.4" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.4">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="Controllers\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\TerapicFisicHelper.Data\TerapicFisicHelper.Data.csproj" />
+    <ProjectReference Include="..\TerapicFisicHelper.Entities\TerapicFisicHelper.Entities.csproj" />
   </ItemGroup>
 
 </Project>
