--- a/TerapicFisicHelper.Web/TerapicFisicHelper.Web.csproj
+++ b/TerapicFisicHelper.Web/TerapicFisicHelper.Web.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
+    <UserSecretsId>31b3d36c-ac79-4a18-acf5-9b6dff2ce009</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
